[package]
name = "microservice-containers"
version = "0.1.0-rc.2"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2018"

[features]
swagger = [ "paperclip", "serde_json" ]

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"], optional = true }
paperclip = { version = "0.6", features = ["actix", "rust_decimal", "chrono", "swagger-ui"], optional = true }
serde = "1"
serde_json = { version = "1", optional = true }
