[package]
name = "microservice-containers"
version = "0.1.0-rc.2"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2021"

[features]
swagger = [ "paperclip", "serde_json" ]
pgsql = ["diesel", "diesel-derive-newtype"]

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"], optional = true }
diesel-derive-newtype = { version = "0.1.2", optional = true }
microservice-utils = { path = "../microservice-utils" }
paperclip = { version = "0.6", features = ["actix", "rust_decimal", "chrono", "swagger-ui"], optional = true }
serde = "1"
serde_json = { version = "1", optional = true }
