[package]
name = "microservice-utils"
version = "0.1.0-rc.2"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2021"

[features]
auth = ["rust-argon2", "quick-error"]

[dependencies]
actix-web = "=4.0.0-beta.18"
rand = "0.8.1"
rust-argon2 = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
validator = "0.14"
quick-error = { version = "2", optional = true }
