[package]
name = "microservice-utils"
version = "0.1.0-rc.2"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2021"

[features]
auth = ["rust-argon2", "quick-error"]
rabbit = ["amiquip", "actix", "crossbeam-channel", "log", "serde_json"]

[dependencies]
actix = { version = "0.12", optional = true }
actix-web = "=4.0.0-beta.20"
amiquip = { version = "0.4.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
rand = "0.8.1"
rust-argon2 = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
validator = "0.14"
quick-error = { version = "2", optional = true }
