[package]
name = "microservice-utils"
version = "0.1.0-rc.3"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2021"

[features]
auth = ["rust-argon2", "quick-error", "rand"]
actix_validation = ["actix-web"]
actix_multipart = ["actix-multipart", "actix-web", "bytes", "futures"]
rabbit = ["amiquip", "actix", "actix-web", "crossbeam-channel", "log", "serde_json"]

[dependencies]
actix = { version = "0.13", optional = true }
actix-web = { version = "4", optional = true }
actix-multipart = { version = "0.6", optional = true }
amiquip = { version = "0.4", optional = true }
bytes = { version = "1.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
rust-argon2 = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
validator = "0.16"
quick-error = { version = "2", optional = true }
