[package]
name = "serwus-containers"
version = "0.1.0-rc.3"
authors = ["Michał Pokrywka", "Vlad Ovinnikov"]
edition = "2021"

[features]
swagger = [ "paperclip", "serde_json" ]
pgsql = ["diesel", "diesel-derive-newtype"]

[dependencies]
diesel = { version = "2.0", features = ["postgres", "chrono"], optional = true }
diesel-derive-newtype = { version = "2.0", optional = true }
serwus-utils = { path = "../serwus-utils" }
paperclip = { version = "0.8", features = ["actix4", "rust_decimal", "chrono", "swagger-ui"], optional = true }
serde = "1"
serde_json = { version = "1", optional = true }
